--- a/a-propos.html
+++ b/a-propos.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>À propos – Ludus Mentis</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – À propos</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
   <main class="container">
 
-<section>
-  <h1>À propos de Ludus Mentis</h1>
-  <p>Scout, musicien, sportif, ingénieur de gestion et aujourd’hui project manager en IT : mon parcours m’a appris la valeur de la coopération, de la discipline et de la passion. Depuis mon enfance, les jeux vidéo ont toujours fait partie de ma vie, entre activités réelles et expériences virtuelles. Aujourd’hui manager de l’équipe nationale belge de Dota 2, je suis convaincu que le jeu vidéo, bien encadré, est un formidable outil d’apprentissage.</p>
-</section>
-<section>
-  <h2>Partenaires</h2>
-  <p>La Commune de Walhain nous soutient par la mise à disposition de locaux et un accompagnement logistique. La BESF (Belgian Esports Federation) nous apporte sa caution éthique et un accompagnement sur le choix des jeux et la professionnalisation de l’encadrement.</p>
-</section>
+    <section class="section card">
+      <h1>À propos de Ludus Mentis</h1>
+      <p>
+        Ludus Mentis est né d’un double constat : l’omniprésence du jeu vidéo dans la vie des jeunes, et le manque d’espaces encadrés où le jeu devient un réel moteur d’apprentissage et d’épanouissement.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Notre équipe</h2>
+      <p>
+        Nous sommes des éducateurs, coachs, psychologues, professionnels de l’esport, unis par la conviction que l’on peut allier passion, développement personnel et bienveillance.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Nos partenaires</h2>
+      <p>
+        La commune de Walhain, la Fédération belge d’esport, et des acteurs locaux engagés dans l’éducation et la jeunesse.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Nos engagements</h2>
+      <ul>
+        <li>Promouvoir un usage sain, responsable et épanouissant du jeu vidéo</li>
+        <li>Assurer un cadre bienveillant et inclusif pour tous</li>
+        <li>Valoriser la coopération plutôt que la compétition à tout prix</li>
+      </ul>
+    </section>
 
   </main>
   <div id="footer"></div>
