--- a/faq.html
+++ b/faq.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>FAQ – Ludus Mentis</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – FAQ</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
   <main class="container">
 
-<section>
-  <h1>Foire aux questions</h1>
-  <h2>Les jeux vidéo sont-ils violents&nbsp;?</h2>
-  <p>Non, tous nos jeux sont choisis pour leur valeur pédagogique et leur absence de violence gratuite. Nous respectons strictement les recommandations PEGI.</p>
-  <h2>Combien de temps devant l’écran&nbsp;?</h2>
-  <p>2 heures par séance, avec alternance entre jeu, activité physique et échanges.</p>
-</section>
+    <section class="section card">
+      <h1>Foire aux questions</h1>
+    </section>
+
+    <section class="section card">
+      <h2>À qui s’adresse Ludus Mentis&nbsp;?</h2>
+      <p>
+        Aux jeunes de 10 à 15 ans, quels que soient leur niveau de jeu ou leur profil : passionnés ou simples curieux du jeu vidéo !
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Est-ce qu’il y a de la compétition ?</h2>
+      <p>
+        La priorité est donnée à la coopération, au respect et à la progression de chacun. Certains ateliers proposent du challenge en équipe, mais sans esprit toxique de compétition.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Comment s’inscrire ?</h2>
+      <p>
+        Il suffit de remplir le <a href="contact.html">formulaire de contact</a> ou d’envoyer un mail à info@ludusmentis.be. Nous vous répondrons rapidement !
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Et pour les parents inquiets ?</h2>
+      <p>
+        Le cadre est sécurisé, l’équipe est formée à l’accompagnement éducatif, et la transparence avec les familles est totale. Vous pouvez nous contacter à tout moment.
+      </p>
+    </section>
 
   </main>
   <div id="footer"></div>
