--- a/methodologie.html
+++ b/methodologie.html
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Méthodologie – Ludus Mentis</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – Notre méthodologie</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
   <main class="container">
 
-<section>
-  <h1>Notre approche pédagogique</h1>
-  <h2>Le cycle de Kolb</h2>
-  <p>Expérience concrète, réflexion, conceptualisation, expérimentation. Exemple : dans Overcooked, un conflit éclate. L’animateur facilite la discussion, aide à comprendre les causes, puis met en place un plan pour la partie suivante.</p>
-</section>
-<section>
-  <h2>Le modèle SAFE</h2>
-  <p>Séquencé, Actif, Focalisé, Explicite : pour un apprentissage progressif et engageant.</p>
-</section>
+    <section class="section card">
+      <h1>Notre méthodologie</h1>
+      <p>
+        Ludus Mentis s’appuie sur des méthodes pédagogiques modernes : cycle de Kolb, pédagogie par l’action, approche bienveillante et valorisation du collectif.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Le cycle d’apprentissage</h2>
+      <ul>
+        <li>Expérimentation : jouer ensemble à des jeux conçus pour coopérer</li>
+        <li>Observation et feedback : échanges sur les comportements, points forts, axes de progrès</li>
+        <li>Conceptualisation : tirer des enseignements pour le jeu… et pour la vraie vie</li>
+        <li>Application : tester ses nouvelles compétences lors de la prochaine séance</li>
+      </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Des rituels positifs</h2>
+      <ul>
+        <li>Échauffement collectif</li>
+        <li>Debriefing bienveillant</li>
+        <li>Pause active (activité physique ou créative)</li>
+      </ul>
+    </section>
 
   </main>
   <div id="footer"></div>
