--- a/mentions.html
+++ b/mentions.html
@@ -1,27 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <title>Mentions – Ludus Mentis</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+  <meta charset="UTF-8">
+  <title>Ludus Mentis – Mentions légales</title>
+  <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
   <div id="header"></div>
   <main class="container">
-<section>
-    
-      <section class="piliers">
-        <div class="pilier">
-          <h2>Éditeur</h2>
-          <p>Antoine Billard – Walhain, Belgique<br>Email : ludus.mentis.esport@gmail.com</p>
-        </div>
-        <div class="pilier">
-          <h2>Crédits</h2>
-          <p>Site développé pour l’académie Ludus Mentis. Contenus protégés – reproduction interdite sans autorisation.</p>
-        </div>
-      </section>
-    
-  </section>
+
+    <section class="section card">
+      <h1>Mentions légales</h1>
+      <p>
+        Ludus Mentis – Association à but non lucratif (asbl)<br>
+        Siège social : Walhain, Belgique<br>
+        Email : info@ludusmentis.be<br>
+        Responsable de publication : L’équipe Ludus Mentis<br>
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Propriété intellectuelle</h2>
+      <p>
+        Le contenu de ce site (textes, images, logos…) est protégé par le droit d’auteur. Toute reproduction est interdite sans accord écrit.
+      </p>
+    </section>
+
+    <section class="section card">
+      <h2>Cookies et données personnelles</h2>
+      <p>
+        Aucune donnée personnelle n’est collectée à votre insu. Les cookies éventuels servent uniquement au bon fonctionnement du site.
+      </p>
+    </section>
+
   </main>
   <div id="footer"></div>
   <script src="assets/js/include.js"></script>
