--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
       <a href="concept.html" class="cta-button">Découvrir le concept</a>
     </section>
 
-    <section class="section card">
-      <h2>Pourquoi Ludus Mentis&nbsp;?</h2>
-      <ul>
-        <li>🎮 Parce que les jeux vidéo sont une réalité quotidienne pour les jeunes.</li>
-        <li>🧠 Parce qu’ils peuvent devenir un outil de développement personnel puissant.</li>
-        <li>🤝 Parce qu’encadrés avec soin, ils permettent d’apprendre autrement.</li>
-      </ul>
-    </section>
+   <section class="section card">
+  <h2>Pourquoi Ludus Mentis&nbsp;?</h2>
+  <ul>
+    <li><strong>Santé :</strong> 80% des ados ne bougent pas assez, le jeu vidéo peut (mal encadré) aggraver sédentarité, troubles du sommeil, stress (OMS, VUB 2022).</li>
+    <li><strong>Compétences sociales :</strong> 52% ont déjà subi du harcèlement en ligne. Apprendre l’empathie et la coopération devient crucial.</li>
+    <li><strong>Familles en difficulté :</strong> 1 parent sur 2 se sent impuissant face à la gestion du temps d’écran.</li>
+    <li><strong>Un vide institutionnel :</strong> Wallonie a des académies de musique et sport… mais rien pour le numérique ! Ludus Mentis comble ce manque.</li>
+  </ul>
+</section>
+
 
     <section class="section card">
       <h2>Les bénéfices pour votre enfant</h2>
