--- a/methodologie.html
+++ b/methodologie.html
@@ -26,14 +26,19 @@
       </ul>
     </section>
 
-    <section class="section card">
-      <h2>Des rituels positifs</h2>
-      <ul>
-        <li>Échauffement collectif</li>
-        <li>Debriefing bienveillant</li>
-        <li>Pause active (activité physique ou créative)</li>
-      </ul>
-    </section>
+<section class="section card">
+  <h2>Notre réponse concrète</h2>
+  <ul>
+    <li><strong>Sessions actives :</strong> jeux coopératifs + exergaming (Ring Fit, Just Dance…), ateliers bien-être (sommeil, nutrition, gestion du stress).</li>
+    <li><strong>Pédagogie innovante :</strong> débriefings en groupe pour apprendre de chaque partie (cycle de Kolb).</li>
+    <li><strong>Charte d’éthique :</strong> co-construite avec les jeunes, pour favoriser le respect et l’empathie.</li>
+    <li><strong>Parentalité positive :</strong> rencontres, ateliers, et bilan en fin de cycle avec les familles.</li>
+    <li><strong>Un “conservatoire numérique” :</strong> une académie structurée, rigoureuse, inclusive, ouverte à tous les jeunes.</li>
+  </ul>
+</section>
+
+
+    
 
   </main>
   <div id="footer"></div>
