--- a/academie.html
+++ b/academie.html
@@ -33,13 +33,15 @@
       </ul>
     </section>
 
-    <section class="section card">
-      <h2>Pour l’édition 2026</h2>
-      <p>
-        L’académie Ludus Mentis revient avec des nouveautés, des partenaires locaux et un cadre encore plus adapté à l’épanouissement de chaque participant.
-      </p>
-      <a href="contact.html" class="cta-button">Demander des infos</a>
-    </section>
+<section class="section card">
+  <h2>Quels résultats concrets&nbsp;?</h2>
+  <ul>
+    <li><strong>Compétences :</strong> progrès mesurés sur la communication, la gestion du stress, la confiance (questionnaires avant/après).</li>
+    <li><strong>Bien-être :</strong> meilleure qualité de sommeil, activité physique accrue, estime de soi renforcée (données jeunes & parents).</li>
+    <li><strong>Satisfaction :</strong> objectif : 85% de jeunes satisfaits ou très satisfaits du programme, et plus de 90% d’assiduité.</li>
+  </ul>
+</section>
+
 
   </main>
   <div id="footer"></div>
