--- a/concept.html
+++ b/concept.html
@@ -41,6 +41,14 @@
             </p>
             <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
         </section>
+
+
+    <section class="section card">
+  <h2>Une vision à long terme</h2>
+  <p>
+    Après une première phase “académie” axée sur le bien-être, Ludus Mentis envisage d’ouvrir une filière esport élite, uniquement pour les jeunes ayant prouvé leur fair-play, persévérance et maturité numérique. Performance, santé, équilibre : jamais l’un sans l’autre.
+  </p>
+</section>
     </main>
 
     <!-- Footer -->
