--- a/a-propos.html
+++ b/a-propos.html
@@ -12,31 +12,43 @@
     <section class="section card">
       <h1>À propos de Ludus Mentis</h1>
       <p>
-        Ludus Mentis est né d’un double constat : l’omniprésence du jeu vidéo dans la vie des jeunes, et le manque d’espaces encadrés où le jeu devient un réel moteur d’apprentissage et d’épanouissement.
+        Ludus Mentis, c’est d’abord une conviction : le jeu vidéo, quand il est bien accompagné, peut devenir un formidable levier d’épanouissement, de rencontres, et d’apprentissage pour les jeunes. <br><br>
+        Moi-même passionné de jeux vidéo depuis l’enfance, mais aussi conscient des risques liés à une pratique non encadrée, j’ai longtemps cherché un espace où le jeu rime avec bienveillance, développement de compétences et vraie vie sociale. Cet espace, je ne l’ai pas trouvé — alors j’ai voulu le créer.
       </p>
     </section>
 
     <section class="section card">
-      <h2>Notre équipe</h2>
+      <h2>Pourquoi Ludus Mentis ?</h2>
       <p>
-        Nous sommes des éducateurs, coachs, psychologues, professionnels de l’esport, unis par la conviction que l’on peut allier passion, développement personnel et bienveillance.
+        Beaucoup de parents se sentent dépassés par le numérique : trop d’heures d’écran, des conflits quotidiens, des inquiétudes sur la santé et le repli social. De l’autre côté, les jeunes rêvent de progresser, de se retrouver entre pairs, mais sans forcément vouloir rejoindre une structure “compétitive” ou élitiste.<br><br>
+        Ludus Mentis est né pour réconcilier ces mondes : montrer que le jeu vidéo peut être une chance, à condition d’être guidé, partagé, discuté, et ancré dans le réel.
       </p>
     </section>
 
     <section class="section card">
-      <h2>Nos partenaires</h2>
+      <h2>Qui suis-je / Qui sommes-nous ?</h2>
       <p>
-        La commune de Walhain, la Fédération belge d’esport, et des acteurs locaux engagés dans l’éducation et la jeunesse.
+        Je ne suis ni un gourou, ni un champion d’esport : juste quelqu’un qui connaît les deux côtés de l’écran, et qui croit qu’on peut faire mieux ensemble. Autour de moi, une petite équipe de pros : éducateurs, animateurs, coachs, qui partagent la même envie d’inventer un nouveau modèle d’accompagnement par le jeu.<br><br>
+        Ce projet est jeune, mais il s’appuie sur des partenaires solides : la commune de Walhain, la Fédération belge d’esport, des acteurs locaux engagés dans la jeunesse et l’innovation sociale.
       </p>
     </section>
 
     <section class="section card">
       <h2>Nos engagements</h2>
       <ul>
-        <li>Promouvoir un usage sain, responsable et épanouissant du jeu vidéo</li>
-        <li>Assurer un cadre bienveillant et inclusif pour tous</li>
-        <li>Valoriser la coopération plutôt que la compétition à tout prix</li>
+        <li>Proposer un cadre où chaque jeune peut apprendre, progresser, s’exprimer — sans pression ni jugement</li>
+        <li>Faire du jeu un outil de dialogue entre générations, et non une source de conflit</li>
+        <li>Associer parents, familles, et professionnels à chaque étape du parcours</li>
+        <li>Ouvrir la porte à une pratique responsable, inclusive, et joyeuse du numérique</li>
       </ul>
+    </section>
+
+    <section class="section card">
+      <h2>Envie d’en savoir plus ou de rejoindre l’aventure ?</h2>
+      <p>
+        Contacte-moi sans hésiter, que tu sois parent, jeune, pro de l’éducation, ou simplement curieux.<br>
+        Ensemble, on peut prouver qu’on peut jouer… et grandir !
+      </p>
     </section>
 
   </main>
