--- a/a-propos.html
+++ b/a-propos.html
@@ -28,8 +28,8 @@
     <section class="section card">
       <h2>Qui suis-je / Qui sommes-nous ?</h2>
       <p>
-        Je ne suis ni un gourou, ni un champion d’esport : juste quelqu’un qui connaît les deux côtés de l’écran, et qui croit qu’on peut faire mieux ensemble. Autour de moi, une petite équipe de pros : éducateurs, animateurs, coachs, qui partagent la même envie d’inventer un nouveau modèle d’accompagnement par le jeu.<br><br>
-        Ce projet est jeune, mais il s’appuie sur des partenaires solides : la commune de Walhain, la Fédération belge d’esport, des acteurs locaux engagés dans la jeunesse et l’innovation sociale.
+        Je ne suis ni un gourou, ni un champion d’esport : juste quelqu’un qui connaît les deux côtés de l’écran, et qui croit qu’on peut faire mieux ensemble. L'envie d'inventer un nouveau modèle d’accompagnement par le jeu.<br><br>
+        Ce projet est jeune, mais il s’appuie sur des partenaires : la commune de Walhain etla Fédération belge d’esport.
       </p>
     </section>
 
