--- a/index.html
+++ b/index.html
@@ -9,23 +9,51 @@
   <div id="header"></div>
   <main class="container">
 
-    <section class="section hero">
-      <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em;">
-      <h1>Et si le jeu vidéo devenait un tremplin pour grandir&nbsp;?</h1>
-      <p>
-        Chez <strong>Ludus Mentis</strong>, nous transformons la passion du jeu en compétences utiles pour la vie : communication, coopération, gestion du stress… Chaque séance est une opportunité d’apprendre en s’amusant.
-      </p>
-      <a href="concept.html" class="cta-button">Découvrir le concept</a>
-    </section>
+  <section class="section hero">
+  <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
+  <h1>Ludus Mentis&nbsp;: Le jeu vidéo pour grandir, pas pour s’isoler</h1>
+  <p>
+    Et si le jeu vidéo, bien accompagné, devenait un outil de développement des compétences humaines&nbsp;?<br>
+    <strong>Ludus Mentis</strong> propose une approche innovante et encadrée, où les jeunes apprennent à coopérer, communiquer, gérer leurs émotions et devenir acteurs de leur bien-être – sur écran et dans la vie réelle.
+  </p>
+</section>
 
-   <section class="section card">
-  <h2>Pourquoi Ludus Mentis&nbsp;?</h2>
+
+  <section class="section card">
+  <h2>Pourquoi accompagner les jeunes autour du jeu vidéo&nbsp;?</h2>
   <ul>
-    <li><strong>Santé :</strong> 80% des ados ne bougent pas assez, le jeu vidéo peut (mal encadré) aggraver sédentarité, troubles du sommeil, stress (OMS, VUB 2022).</li>
-    <li><strong>Compétences sociales :</strong> 52% ont déjà subi du harcèlement en ligne. Apprendre l’empathie et la coopération devient crucial.</li>
-    <li><strong>Familles en difficulté :</strong> 1 parent sur 2 se sent impuissant face à la gestion du temps d’écran.</li>
-    <li><strong>Un vide institutionnel :</strong> Wallonie a des académies de musique et sport… mais rien pour le numérique ! Ludus Mentis comble ce manque.</li>
+    <li>
+      <strong>90% des adolescents jouent régulièrement à des jeux vidéo en Europe</strong> (<a href="https://www.statista.com/statistics/726583/europe-frequency-video-gaming-among-adolescents-by-country/" target="_blank">Statista, 2023</a>).
+    </li>
+    <li>
+      <strong>Un usage mal encadré peut augmenter l’anxiété, la sédentarité ou l’isolement social</strong> (<a href="https://www.unicef-irc.org/publications/1002-children-and-digital-technology.html" target="_blank">UNICEF, 2020</a>).
+    </li>
+    <li>
+      <strong>Mais utilisé de façon éducative, le jeu vidéo favorise la collaboration, la créativité et la résolution de problèmes</strong> (<a href="https://doi.org/10.1007/978-3-031-89557-9" target="_blank">MEGASKILLS, EU, 2025</a>).
+    </li>
   </ul>
+</section>
+
+<section class="section card">
+  <h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
+  <p>
+    Selon une vaste étude européenne (<a href="https://doi.org/10.1007/978-3-031-89557-9" target="_blank">MEGASKILLS, 2025</a>), les compétences les plus recherchées chez les jeunes aujourd’hui sont&nbsp;:
+  </p>
+  <ul>
+    <li>Collaboration &amp; travail d’équipe</li>
+    <li>Communication &amp; écoute active</li>
+    <li>Créativité</li>
+    <li>Résolution de problèmes</li>
+    <li>Esprit critique</li>
+    <li>Gestion du stress &amp; des émotions</li>
+    <li>Empathie &amp; respect de la diversité</li>
+    <li>Adaptabilité</li>
+  </ul>
+  <p>
+    Toutes ces compétences sont travaillées dans notre programme, à travers des ateliers concrets, du jeu coopératif, et des moments d’échange en groupe.
+    <br>
+    <a href="concept.html">En savoir plus sur notre approche pédagogique</a>
+  </p>
 </section>
 
 
@@ -46,6 +74,15 @@
       </p>
       <a href="academie.html" class="cta-button">Voir notre académie 2026</a>
     </section>
+
+      <section class="section card" style="text-align:center;">
+  <h2>Des questions ? Parlons-en !</h2>
+  <p>
+    <a href="faq.html">Consultez notre FAQ</a> ou <a href="contact.html">contactez-nous directement</a>.<br>
+    Nous répondons à toutes vos préoccupations de parent.
+  </p>
+</section>
+
 
   </main>
   <div id="footer"></div>
