--- a/faq.html
+++ b/faq.html
@@ -37,7 +37,7 @@
     <section class="section card">
       <h2>Et pour les parents inquiets ?</h2>
       <p>
-        Le cadre est sécurisé, l’équipe est formée à l’accompagnement éducatif, et la transparence avec les familles est totale. Vous pouvez nous contacter à tout moment.
+        Le cadre est sécurisé et la transparence avec les familles est totale. Vous pouvez nous contacter à tout moment.
       </p>
     </section>
 
