--- a/index.html
+++ b/index.html
@@ -66,7 +66,24 @@
         <li><strong>Confiance en soi&nbsp;:</strong> Valoriser ses talents et oser prendre des initiatives.</li>
       </ul>
     </section>
-
+<section class="chiffres-cles">
+  <h2>Le saviez-vous ?</h2>
+  <ul>
+    <li>
+      <strong>97 % des jeunes Belges</strong> sont connectés chaque jour.<br>
+      <small><a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank">European Commission, 2024</a></small>
+    </li>
+    <li>
+      <strong>22 % des adolescents</strong> jouent plus de 4 h d’affilée.<br>
+      <small><a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">WHO, 2024</a></small>
+    </li>
+    <li>
+      <strong>57 % des ados belges</strong> dépassent les recommandations d’écran le week-end.<br>
+      <small><a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank">Sciensano, 2023</a></small>
+    </li>
+  </ul>
+  <a href="enjeux.html" class="btn">Voir tous les chiffres & sources</a>
+</section>
     <section class="section card">
       <h2>Un projet soutenu localement</h2>
       <p>
