--- a/concept.html
+++ b/concept.html
@@ -42,7 +42,18 @@
             <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
         </section>
 
-
+<aside class="encart-chiffres">
+  <h3>Usage massif : pourquoi accompagner ?</h3>
+  <p>
+    <strong>1 jeune sur 5</strong> joue plus de 4h d’affilée.<br>
+    <strong>12 %</strong> sont à risque de gaming disorder.<br>
+    <strong>Les risques :</strong> fatigue, troubles du sommeil, cyberharcèlement, dérives commerciales.<br>
+    <small>
+      <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">WHO, 2024</a>
+      | <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank">EPRS, 2023</a>
+    </small>
+  </p>
+</aside>
     <section class="section card">
   <h2>Une vision à long terme</h2>
   <p>
