--- a/faq.html
+++ b/faq.html
@@ -26,7 +26,14 @@
         La priorité est donnée à la coopération, au respect et à la progression de chacun. Certains ateliers proposent du challenge en équipe, mais sans esprit toxique de compétition.
       </p>
     </section>
-
+<div class="faq-chiffres">
+  <strong>En chiffres :</strong>
+  <ul>
+    <li>12 % des ados européens sont à risque de dépendance selon l’OMS <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">[source]</a></li>
+    <li>Les recommandations internationales privilégient l’encadrement et la prévention à l’interdiction totale <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank">[OMS]</a></li>
+  </ul>
+  <a href="enjeux.html">En savoir plus, chiffres & sources</a>
+</div>
     <section class="section card">
       <h2>Comment s’inscrire ?</h2>
       <p>
