--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 
   <section class="section hero">
   <img src="assets/images/Ludus_Mentis_Logo_Transparent.png" alt="Logo Ludus Mentis" style="max-width:120px; margin-bottom:1em" />
-  <h1>Ludus Mentis&nbsp;: Le jeu vidéo pour grandir, pas pour s’isoler</h1>
-  <p>
-    Et si le jeu vidéo, bien accompagné, devenait un outil de développement des compétences humaines&nbsp;?<br>
-    <strong>Ludus Mentis</strong> propose une approche innovante et encadrée, où les jeunes apprennent à coopérer, communiquer, gérer leurs émotions et devenir acteurs de leur bien-être – sur écran et dans la vie réelle.
-  </p>
+  <h1>Ludus Mentis&nbsp;: Faire du jeu vidéo une force pour nos jeunes</h1>
+<p>
+  Chez Ludus Mentis, le jeu vidéo devient un outil d’apprentissage, de partage et de développement personnel. 
+  Notre accompagnement pédagogique permet aux jeunes de découvrir les atouts du jeu – communication, gestion des émotions, esprit d’équipe – pour s’épanouir à l’écran et au-delà.
+</p>
 </section>
 
 
@@ -66,7 +66,8 @@
         <li><strong>Confiance en soi&nbsp;:</strong> Valoriser ses talents et oser prendre des initiatives.</li>
       </ul>
     </section>
-<section class="chiffres-cles">
+      
+<section class="section card">
   <h2>Le saviez-vous ?</h2>
   <ul>
     <li>
@@ -84,6 +85,8 @@
   </ul>
   <a href="enjeux.html" class="btn">Voir tous les chiffres & sources</a>
 </section>
+
+    
     <section class="section card">
       <h2>Un projet soutenu localement</h2>
       <p>
