--- a/enjeux.html
+++ b/enjeux.html
@@ -11,7 +11,7 @@
   <main class="content">
     <h1>Jeux vidéo : Enjeux, chiffres & sources</h1>
 
-    <section>
+    <section class="section card">
       <h2>Synthèse éclair</h2>
       <p>
         Les données européennes et belges convergent : près de tous les adolescents sont connectés chaque jour ; un tiers joue quotidiennement, et plus d’un sur cinq dépasse quatre heures de jeu continu. En Belgique, les très jeunes enfants atteignent déjà des temps d’écran supérieurs aux recommandations officielles.<br>
@@ -20,7 +20,7 @@
       </p>
     </section>
 
-    <section>
+    <section class="section card">
       <h2>Chiffres clés</h2>
       <ul>
         <li><strong>97 % des jeunes (16-29 ans)</strong> utilisent Internet chaque jour en Europe <sup><a href="#source1">[1]</a></sup></li>
@@ -33,7 +33,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="section card">
       <h2>Risques liés à un usage non encadré</h2>
       <h3>Physiques</h3>
       <ul>
@@ -54,7 +54,7 @@
       </ul>
     </section>
 
-    <section>
+    <section class="section card">
       <h2>Pourquoi une académie d’accompagnement ?</h2>
       <table>
         <thead>
@@ -93,21 +93,20 @@
       </p>
     </section>
 
-    <section>
+    <section class="section card">
       <h2>Pour aller plus loin : Sources principales</h2>
       <ol>
-        <li id="source1">[1] European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank">Lien</a></li>
-        <li id="source2">[2] World Health Organization, "Teens and Screens" report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">Lien</a></li>
-        <li id="source3">[3] Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank">Lien</a></li>
-        <li id="source4">[4] World Health Organization, ICD-11, Gaming Disorder, 2019 et OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank">Lien</a></li>
-        <li id="source5">[5] L’Echo, "Le marché belge du jeu vidéo a bondi de 12 %", juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" target="_blank">Lien</a></li>
-        <li id="source6">[6] Systematic review, Europe, "Video Games and Visual Fatigue in Youth", PMC, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank">Lien</a></li>
-        <li id="source7">[7] "Gaming-Related Musculoskeletal Disorders in Adolescents", PLOS ONE, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" target="_blank">Lien</a></li>
-        <li id="source8">[8] "Screen Time and Sleep in Adolescents", PubMed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" target="_blank">Lien</a></li>
-        <li id="source9">[9] European Parliamentary Research Service (EPRS), "Cyberbullying Among Young People", 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank">Lien</a></li>
-        <li id="source10">[10] European Parliament, "Loot Boxes in Video Games and Gambling-Like Elements", 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank">Lien</a></li>
+        <li id="source1"] European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank">Lien</a></li>
+        <li id="source2"> World Health Organization, "Teens and Screens" report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">Lien</a></li>
+        <li id="source3"> Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank">Lien</a></li>
+        <li id="source4"> World Health Organization, ICD-11, Gaming Disorder, 2019 et OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank">Lien</a></li>
+        <li id="source5"> L’Echo, "Le marché belge du jeu vidéo a bondi de 12 %", juin 2024. <a href="https://www.lecho.be/entreprises/technologie/le-marche-belge-du-jeu-video-a-bondi-de-12/10530322.html" target="_blank">Lien</a></li>
+        <li id="source6"> Systematic review, Europe, "Video Games and Visual Fatigue in Youth", PMC, 2023. <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9886627/" target="_blank">Lien</a></li>
+        <li id="source7"> "Gaming-Related Musculoskeletal Disorders in Adolescents", PLOS ONE, 2022. <a href="https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0261897" target="_blank">Lien</a></li>
+        <li id="source8"> "Screen Time and Sleep in Adolescents", PubMed, 2024. <a href="https://pubmed.ncbi.nlm.nih.gov/38524754/" target="_blank">Lien</a></li>
+        <li id="source9"> European Parliamentary Research Service (EPRS), "Cyberbullying Among Young People", 2023. <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank">Lien</a></li>
+        <li id="source10"> European Parliament, "Loot Boxes in Video Games and Gambling-Like Elements", 2023. <a href="https://www.europarl.europa.eu/RegData/etudes/BRIE/2023/741420/EPRS_BRI(2023)741420_EN.pdf" target="_blank">Lien</a></li>
       </ol>
-      <p>Une bibliographie complète et une charte “parents-académie” sont disponibles sur demande.</p>
     </section>
   </main>
   <div id="footer"></div>
