--- a/concept.html
+++ b/concept.html
@@ -42,7 +42,7 @@
             <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
         </section>
 
-<aside class="encart-chiffres">
+<section class="section card">
   <h3>Usage massif : pourquoi accompagner ?</h3>
   <p>
     <strong>1 jeune sur 5</strong> joue plus de 4h d’affilée.<br>
@@ -53,7 +53,7 @@
       | <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank">EPRS, 2023</a>
     </small>
   </p>
-</aside>
+</section>
     <section class="section card">
   <h2>Une vision à long terme</h2>
   <p>
