--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
       </ul>
     </section>
 
-<section class="section card" id="concept">
-      <h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
+  <section class="section card" id="concept">
+      <h2>Des compétences humaines pour le 21<sup>e</sup> siècle</h2>
       <p>
-        Selon le <a href="https://reports.weforum.org/docs/WEF_Future_of_Jobs_Report_2025.pdf" target="_blank" rel="noopener noreferrer">Future of Jobs Report 2025 (WEF)</a>, les compétences les plus recherchées chez les jeunes aujourd’hui sont :
+        Selon le <a href="https://reports.weforum.org/docs/WEF_Future_of_Jobs_Report_2025.pdf" target="_blank" rel="noopener noreferrer">Future&nbsp;of&nbsp;Jobs&nbsp;Report 2025</a> (WEF)&nbsp;et l’ouvrage en libre accès <a href="https://link.springer.com/book/10.1007/978-3-031-89557-9" target="_blank" rel="noopener noreferrer">Soft Skills for the 21st Century</a> (Kubátová&nbsp;et&nbsp;al., 2025&nbsp;– MEGASKILLS), les compétences les plus recherchées chez les jeunes aujourd’hui sont&nbsp;:
       </p>
       <ul>
         <li>Collaboration &amp; travail d’équipe</li>
@@ -53,10 +53,9 @@
         <li>Adaptabilité</li>
       </ul>
       <p>
-        Toutes ces compétences sont travaillées dans notre programme, au travers d’ateliers concrets, de jeux coopératifs et de moments d’échange en groupe.
+        Toutes ces compétences sont travaillées dans notre programme&nbsp;: ateliers concrets, jeux coopératifs et moments d’échange en groupe.
       </p>
     </section>
-
 
     <section class="section card">
       <h2>Les bénéfices pour votre enfant</h2>
