--- a/enjeux.html
+++ b/enjeux.html
@@ -96,7 +96,7 @@
     <section class="section card">
       <h2>Pour aller plus loin : Sources principales</h2>
       <ol>
-        <li id="source1"] European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank">Lien</a></li>
+        <li id="source1"> European Commission – Digital Economy and Society Index, 2024. <a href="https://digital-strategy.ec.europa.eu/en/policies/desi" target="_blank">Lien</a></li>
         <li id="source2"> World Health Organization, "Teens and Screens" report, 2024. <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">Lien</a></li>
         <li id="source3"> Sciensano, Enquête de santé 2023. <a href="https://www.sciensano.be/fr/themes/surveillance-comportementale/sante-mentale-et-consommation-de-medias" target="_blank">Lien</a></li>
         <li id="source4"> World Health Organization, ICD-11, Gaming Disorder, 2019 et OMS Europe 2024. <a href="https://icd.who.int/browse11/l-m/fr#/http://id.who.int/icd/entity/1448597234" target="_blank">Lien</a></li>
