--- a/concept.html
+++ b/concept.html
@@ -1,17 +1,12 @@
-
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <title>Notre concept – Ludus Mentis</title>
     <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
-    <!-- Header -->
-    
-<div id="header"></div>
-
+    <div id="header"></div>
 
     <main class="container">
         <section class="section">
@@ -25,46 +20,35 @@
         </section>
 
         <section class="section card">
-            <h2>Ce que les enfants apprennent en jouant</h2>
+            <h2>Ce que les enfants apprennent concrètement</h2>
             <ul>
                 <li>💬 Communiquer clairement avec leurs coéquipiers</li>
                 <li>🧘 Gérer leurs émotions dans des situations stressantes</li>
-                <li>🎯 Se fixer des objectifs et persévérer</li>
+                <li>🎯 Se fixer des objectifs et persévérer pour les atteindre</li>
                 <li>🫱 S’intégrer à un groupe et coopérer avec bienveillance</li>
             </ul>
         </section>
 
         <section class="section">
-            <h2>Et concrètement ?</h2>
+            <h2>Comment ça marche en pratique ?</h2>
             <p>
-                Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>, accompagnés d’activités de groupe et de temps d’échange pour relier ce qui se passe dans le jeu à la vie réelle.
+                Nous utilisons des jeux comme <strong>Overcooked</strong>, <strong>Rocket League</strong> ou <strong>Keep Talking and Nobody Explodes</strong>. Ces jeux sont des outils : ils servent de support à des activités de groupe et à des temps d’échange pour relier ce qui se passe à l’écran à la vie réelle.
             </p>
             <a href="methodologie.html" class="cta-button">Voir notre méthode pédagogique</a>
         </section>
 
-<section class="section card">
-  <h3>Usage massif : pourquoi accompagner ?</h3>
-  <p>
-    <strong>1 jeune sur 5</strong> joue plus de 4h d’affilée.<br>
-    <strong>12 %</strong> sont à risque de gaming disorder.<br>
-    <strong>Les risques :</strong> fatigue, troubles du sommeil, cyberharcèlement, dérives commerciales.<br>
-    <small>
-      <a href="https://www.who.int/europe/news/item/23-05-2024-new-who-report-teens-screens-digital-media" target="_blank">WHO, 2024</a>
-      | <a href="https://www.europarl.europa.eu/thinktank/en/document/EPRS_BRI(2023)747569" target="_blank">EPRS, 2023</a>
-    </small>
-  </p>
-</section>
-    <section class="section card">
-  <h2>Une vision à long terme</h2>
-  <p>
-    Après une première phase “académie” axée sur le bien-être, Ludus Mentis envisage d’ouvrir une filière esport élite, uniquement pour les jeunes ayant prouvé leur fair-play, persévérance et maturité numérique. Performance, santé, équilibre : jamais l’un sans l’autre.
-  </p>
-</section>
+        <section class="section card">
+          <h2>Une vision à long terme</h2>
+          <p>
+            Après une première phase “académie” axée sur le bien-être et les compétences sociales, Ludus Mentis envisage d’ouvrir une filière esport plus compétitive.
+          </p>
+           <p>
+               Cette filière sera accessible uniquement aux jeunes ayant démontré leur fair-play, leur persévérance et leur maturité numérique. Pour nous, la performance, la santé et l’équilibre sont indissociables.
+           </p>
+        </section>
     </main>
 
-    <!-- Footer -->
-    
-<div id="footer"></div>
+    <div id="footer"></div>
 
   <script src="assets/js/include.js"></script>
 </body>
