--- a/enjeux.html
+++ b/enjeux.html
@@ -8,9 +8,10 @@
 </head>
 <body>
  <div id="header"></div>
-  <main class="content">
+     <section class="section card">
     <h1>Jeux vidéo : Enjeux, chiffres & sources</h1>
-
+      </section>
+       
     <section class="section card">
       <h2>Synthèse éclair</h2>
       <p>
